Solved the problems

--- a/intro-to-tensorflow/intro_to_tensorflow.ipynb
+++ b/intro-to-tensorflow/intro_to_tensorflow.ipynb
@@ -177,7 +177,12 @@
     "    :param image_data: The image data to be normalized\n",
     "    :return: Normalized image data\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Min-Max scaling for grayscale image data\n",
+    "    a = 0.1\n",
+    "    b = 0.9\n",
+    "    min_val = 0.\n",
+    "    max_val = 255.\n",
+    "    # Min-Max scaling for grayscale image data\n",
+    "    return [a + ((image_datum - min_val) * (b - a) / (max_val - min_val)) for image_datum in image_data]\n",
     "\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
@@ -285,11 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data and modules loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
@@ -347,11 +360,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# All the pixels in the image (28 * 28 = 784)\n",
     "features_count = 784\n",
@@ -359,14 +380,12 @@
     "labels_count = 10\n",
     "\n",
     "# TODO: Set the features and labels tensors\n",
-    "# features = \n",
-    "# labels = \n",
+    "features = tf.placeholder(tf.float32)\n",
+    "labels = tf.placeholder(tf.float32)\n",
     "\n",
     "# TODO: Set the weights and biases tensors\n",
-    "# weights = \n",
-    "# biases = \n",
-    "\n",
-    "\n",
+    "weights = tf.Variable(tf.truncated_normal((features_count, labels_count)))\n",
+    "biases = tf.Variable(tf.zeros(labels_count))\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
     "\n",
@@ -424,11 +443,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy function created.\n"
+     ]
+    }
+   ],
    "source": [
     "# Determine if the predictions are correct\n",
     "is_correct_prediction = tf.equal(tf.argmax(prediction, 1), tf.argmax(labels, 1))\n",
@@ -479,14 +506,14 @@
    },
    "outputs": [],
    "source": [
+    "# def experiment(epochs, learning_rate):\n",
+    "\n",
     "# Change if you have memory restrictions\n",
     "batch_size = 128\n",
     "\n",
     "# TODO: Find the best parameters for each configuration\n",
-    "# epochs = \n",
-    "# learning_rate = \n",
-    "\n",
-    "\n",
+    "epochs = 3\n",
+    "learning_rate = 0.2\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
     "# Gradient Descent\n",
@@ -507,10 +534,10 @@
     "    batch_count = int(math.ceil(len(train_features)/batch_size))\n",
     "\n",
     "    for epoch_i in range(epochs):\n",
-    "        \n",
+    "\n",
     "        # Progress bar\n",
     "        batches_pbar = tqdm(range(batch_count), desc='Epoch {:>2}/{}'.format(epoch_i+1, epochs), unit='batches')\n",
-    "        \n",
+    "\n",
     "        # The training cycle\n",
     "        for batch_i in batches_pbar:\n",
     "            # Get a batch of training features and labels\n",
@@ -553,7 +580,19 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "print('Validation accuracy at {}'.format(validation_accuracy))"
+    "print('Validation accuracy at {}'.format(validation_accuracy))\n",
+    "\n",
+    "# experiment(1, 0.2)\n",
+    "# experiment(2, 0.2)\n",
+    "# experiment(3, 0.2)\n",
+    "# experiment(4, 0.2)\n",
+    "# experiment(5, 0.2)\n",
+    "\n",
+    "# experiment(1, 0.8)\n",
+    "# experiment(1, 0.5)\n",
+    "# experiment(1, 0.1)\n",
+    "# experiment(1, 0.05)\n",
+    "# experiment(1, 0.01)"
    ]
   },
   {
@@ -566,11 +605,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch  1/3: 100%|██████████| 1114/1114 [00:00<00:00, 1282.94batches/s]\n",
+      "Epoch  2/3: 100%|██████████| 1114/1114 [00:00<00:00, 1285.58batches/s]\n",
+      "Epoch  3/3: 100%|██████████| 1114/1114 [00:00<00:00, 1296.92batches/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice Job! Test Accuracy is 0.848800003528595\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "### DON'T MODIFY ANYTHING BELOW ###\n",
     "# The accuracy measured against the test set\n",
@@ -630,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
