Implement training nn for tv script generation

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -39,11 +39,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Stats\n",
+      "Roughly the number of unique words: 11492\n",
+      "Number of scenes: 262\n",
+      "Average number of sentences in each scene: 15.248091603053435\n",
+      "Number of lines: 4257\n",
+      "Average number of words in each line: 11.50434578341555\n",
+      "\n",
+      "The sentences 0 to 10:\n",
+      "Moe_Szyslak: (INTO PHONE) Moe's Tavern. Where the elite meet to drink.\n",
+      "Bart_Simpson: Eh, yeah, hello, is Mike there? Last name, Rotch.\n",
+      "Moe_Szyslak: (INTO PHONE) Hold on, I'll check. (TO BARFLIES) Mike Rotch. Mike Rotch. Hey, has anybody seen Mike Rotch, lately?\n",
+      "Moe_Szyslak: (INTO PHONE) Listen you little puke. One of these days I'm gonna catch you, and I'm gonna carve my name on your back with an ice pick.\n",
+      "Moe_Szyslak: What's the matter Homer? You're not your normal effervescent self.\n",
+      "Homer_Simpson: I got my problems, Moe. Give me another one.\n",
+      "Moe_Szyslak: Homer, hey, you should not drink to forget your problems.\n",
+      "Barney_Gumble: Yeah, you should only drink to enhance your social skills.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "view_sentence_range = (0, 10)\n",
     "\n",
@@ -88,14 +113,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import problem_unittests as tests\n",
+    "import string\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "def create_lookup_tables(text):\n",
     "    \"\"\"\n",
@@ -103,8 +140,10 @@
     "    :param text: The text of tv scripts split into words\n",
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    words = set(text)\n",
+    "    int_to_vocab = {i: word for i, word in enumerate(words)}\n",
+    "    vocab_to_int = {word: i for i, word in enumerate(words)}\n",
+    "    return vocab_to_int, int_to_vocab\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -137,19 +176,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
     "    Generate a dict to turn punctuation into a token.\n",
     "    :return: Tokenize dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    return {\n",
+    "        \"!\": \"||Exclamation_Mark||\",\n",
+    "        \".\": \"||Period||\",\n",
+    "        '\"': \"||Quotation_Mark||\",\n",
+    "        \"?\": \"||Question_Mark||\",\n",
+    "        \",\": \"||Comma||\",\n",
+    "        \";\": \"||Semicolon||\",\n",
+    "        \"(\": \"||Left_Parentheses||\",\n",
+    "        \")\": \"||Right_Parentheses||\",\n",
+    "        \"--\": \"||Dash||\",\n",
+    "        \"\\n\": \"||Return||\"\n",
+    "    }\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -167,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -190,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -202,6 +259,9 @@
     "import helper\n",
     "import numpy as np\n",
     "import problem_unittests as tests\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "int_text, vocab_to_int, int_to_vocab, token_dict = helper.load_preprocess()"
    ]
@@ -224,11 +284,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow Version: 1.6.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/envs/tv_script_generation/lib/python3.6/site-packages/ipykernel_launcher.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n",
+      "  \n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -263,11 +339,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_inputs():\n",
     "    \"\"\"\n",
@@ -275,7 +359,10 @@
     "    :return: Tuple (input, targets, learning rate)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None, None\n",
+    "    input = tf.placeholder(tf.int32, [None, None], name=\"input\")\n",
+    "    targets = tf.placeholder(tf.int32, [None, None])\n",
+    "    learning_rate = tf.placeholder(tf.float32, [])\n",
+    "    return input, targets, learning_rate\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -299,11 +386,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_init_cell(batch_size, rnn_size):\n",
     "    \"\"\"\n",
@@ -313,7 +408,12 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
+    "    basic_lstm1 = tf.contrib.rnn.BasicLSTMCell(num_units=rnn_size)\n",
+    "    basic_lstm2 = tf.contrib.rnn.BasicLSTMCell(num_units=rnn_size)\n",
+    "    multi_rnn = tf.contrib.rnn.MultiRNNCell([basic_lstm1, basic_lstm2])\n",
+    "    initial_state = multi_rnn.zero_state(batch_size, tf.float32)\n",
+    "    initial_state = tf.identity(initial_state, name=\"initial_state\")\n",
+    "    return multi_rnn, initial_state\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -332,11 +432,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_embed(input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -347,7 +455,11 @@
     "    :return: Embedded input.\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    embeddings = tf.get_variable(\"embedding\", shape=[vocab_size, embed_dim], dtype=tf.float32)\n",
+    "    return tf.nn.embedding_lookup(\n",
+    "        embeddings,\n",
+    "        input_data\n",
+    "    )\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -370,11 +482,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_rnn(cell, inputs):\n",
     "    \"\"\"\n",
@@ -384,8 +504,12 @@
     "    :return: Tuple (Outputs, Final State)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
-    "\n",
+    "    outputs, final_state = tf.nn.dynamic_rnn(\n",
+    "        cell,\n",
+    "        inputs,\n",
+    "        dtype=tf.float32\n",
+    "    )\n",
+    "    return outputs, tf.identity(final_state, \"final_state\")\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -408,11 +532,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def build_nn(cell, rnn_size, input_data, vocab_size, embed_dim):\n",
     "    \"\"\"\n",
@@ -425,8 +557,13 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    return None, None\n",
-    "\n",
+    "    embedding = get_embed(input_data, vocab_size, embed_dim)\n",
+    "    rnn_outputs, final_state = build_rnn(cell, embedding)\n",
+    "    output = tf.layers.dense(\n",
+    "        rnn_outputs,\n",
+    "        vocab_size\n",
+    "    )\n",
+    "    return output, final_state\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -479,11 +616,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_batches(int_text, batch_size, seq_length):\n",
     "    \"\"\"\n",
@@ -493,8 +638,54 @@
     "    :param seq_length: The length of sequence\n",
     "    :return: Batches as a Numpy array\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
+    "    \n",
+    "    def drop_end(list_to_trim, seq_length, batch_size):\n",
+    "        def drop_end_for_sequence(list_to_trim, seq_length):\n",
+    "            input_len = len(list_to_trim)\n",
+    "            drop_len = input_len % seq_length\n",
+    "            if drop_len > 0:\n",
+    "                list_to_trim = list_to_trim[:-drop_len]\n",
+    "            return list_to_trim\n",
+    "        \n",
+    "        def drop_end_for_batch(list_to_trim, seq_length, batch_size):\n",
+    "            input_len = len(list_to_trim)\n",
+    "            drop_len = (input_len // seq_length) % batch_size\n",
+    "            if drop_len > 0:\n",
+    "                list_to_trim = list_to_trim[:-(drop_len*seq_length)]\n",
+    "            \n",
+    "            return list_to_trim\n",
+    "        \n",
+    "        list_to_trim = drop_end_for_sequence(list_to_trim, seq_length)\n",
+    "        list_to_trim = drop_end_for_batch(list_to_trim, seq_length, batch_size)\n",
+    "        return list_to_trim\n",
+    "        \n",
+    "    int_text = drop_end(int_text, seq_length, batch_size)\n",
+    "    \n",
+    "    target_text = int_text[1:]\n",
+    "    target_text.append(int_text[0])\n",
+    "    \n",
+    "    texts = int_text + target_text\n",
+    "    texts = np.array(texts)\n",
+    "    # split to input and target\n",
+    "    texts = texts.reshape(2, -1)\n",
+    "    \n",
+    "    # group into sequences\n",
+    "    seq_texts = texts.reshape(2, -1, seq_length)\n",
+    "    \n",
+    "    # group batches where the ordered sequences are in separate batches\n",
+    "    # e.g. [[[0 1] [10 11]] [[2  3 ] [12 13]]] \n",
+    "    # not  [[[0 1] [2  3 ]] [[10 11] [12 13]]]\n",
+    "    batches_seq_text = seq_texts.reshape(2, batch_size, -1, seq_length)\n",
+    "    #batches_seq_text = seq_texts.reshape(2, -1, batch_size, seq_length)\n",
+    "    # ^^ Does not work because it outputs\n",
+    "    # e.g. [[[0 1] [2  3 ]] [[10 11] [12 13]]]\n",
+    "    # not  [[[0 1] [10 11]] [[2  3 ] [12 13]]] \n",
+    "    \n",
+    "    # swap axes to meet output format requirements\n",
+    "    batches_seq_text = np.swapaxes(batches_seq_text, 0, 1)\n",
+    "    batches_seq_text = np.swapaxes(batches_seq_text, 0, 2)\n",
+    "    \n",
+    "    return batches_seq_text\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -522,26 +713,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 4\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 128\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 100\n",
     "# Embedding Dimension Size\n",
-    "embed_dim = None\n",
+    "embed_dim = 300\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 5\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 3e-4\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = None\n",
+    "show_every_n_batches = 10\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -559,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -606,11 +797,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch   0 Batch    0/107   train_loss = 8.822\n",
+      "Epoch   0 Batch   10/107   train_loss = 8.817\n",
+      "Epoch   0 Batch   20/107   train_loss = 8.810\n",
+      "Epoch   0 Batch   30/107   train_loss = 8.791\n",
+      "Epoch   0 Batch   40/107   train_loss = 8.746\n",
+      "Epoch   0 Batch   50/107   train_loss = 8.556\n",
+      "Epoch   0 Batch   60/107   train_loss = 8.106\n",
+      "Epoch   0 Batch   70/107   train_loss = 7.504\n",
+      "Epoch   0 Batch   80/107   train_loss = 7.131\n",
+      "Epoch   0 Batch   90/107   train_loss = 6.847\n",
+      "Epoch   0 Batch  100/107   train_loss = 6.613\n",
+      "Epoch   1 Batch    3/107   train_loss = 6.451\n",
+      "Epoch   1 Batch   13/107   train_loss = 6.358\n",
+      "Epoch   1 Batch   23/107   train_loss = 6.348\n",
+      "Epoch   1 Batch   33/107   train_loss = 6.268\n",
+      "Epoch   1 Batch   43/107   train_loss = 6.292\n",
+      "Epoch   1 Batch   53/107   train_loss = 6.250\n",
+      "Epoch   1 Batch   63/107   train_loss = 6.155\n",
+      "Epoch   1 Batch   73/107   train_loss = 6.300\n",
+      "Epoch   1 Batch   83/107   train_loss = 6.014\n",
+      "Epoch   1 Batch   93/107   train_loss = 6.304\n",
+      "Epoch   1 Batch  103/107   train_loss = 6.278\n",
+      "Epoch   2 Batch    6/107   train_loss = 6.069\n",
+      "Epoch   2 Batch   16/107   train_loss = 6.169\n",
+      "Epoch   2 Batch   26/107   train_loss = 6.293\n",
+      "Epoch   2 Batch   36/107   train_loss = 6.037\n",
+      "Epoch   2 Batch   46/107   train_loss = 6.105\n",
+      "Epoch   2 Batch   56/107   train_loss = 5.978\n",
+      "Epoch   2 Batch   66/107   train_loss = 5.984\n",
+      "Epoch   2 Batch   76/107   train_loss = 6.007\n",
+      "Epoch   2 Batch   86/107   train_loss = 5.878\n",
+      "Epoch   2 Batch   96/107   train_loss = 6.133\n",
+      "Epoch   2 Batch  106/107   train_loss = 6.086\n",
+      "Epoch   3 Batch    9/107   train_loss = 6.017\n",
+      "Epoch   3 Batch   19/107   train_loss = 6.178\n",
+      "Epoch   3 Batch   29/107   train_loss = 6.179\n",
+      "Epoch   3 Batch   39/107   train_loss = 6.031\n",
+      "Epoch   3 Batch   49/107   train_loss = 6.061\n",
+      "Epoch   3 Batch   59/107   train_loss = 6.024\n",
+      "Epoch   3 Batch   69/107   train_loss = 6.103\n",
+      "Epoch   3 Batch   79/107   train_loss = 6.042\n",
+      "Epoch   3 Batch   89/107   train_loss = 6.223\n",
+      "Epoch   3 Batch   99/107   train_loss = 6.090\n",
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -655,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -677,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -725,6 +967,7 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
+    "    \n",
     "    return None, None, None, None\n",
     "\n",
     "\n",
@@ -856,7 +1099,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   },
   "widgets": {
    "state": {},
@@ -864,5 +1107,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
