Implement the generation code for tv script

--- a/tv-script-generation/dlnd_tv_script_generation.ipynb
+++ b/tv-script-generation/dlnd_tv_script_generation.ipynb
@@ -954,11 +954,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def get_tensors(loaded_graph):\n",
     "    \"\"\"\n",
@@ -967,8 +975,11 @@
     "    :return: Tuple (InputTensor, InitialStateTensor, FinalStateTensor, ProbsTensor)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    \n",
-    "    return None, None, None, None\n",
+    "    input = loaded_graph.get_tensor_by_name(\"input:0\")\n",
+    "    initial_state = loaded_graph.get_tensor_by_name(\"initial_state:0\")\n",
+    "    final_state = loaded_graph.get_tensor_by_name(\"final_state:0\")\n",
+    "    probs = loaded_graph.get_tensor_by_name(\"probs:0\")\n",
+    "    return input, initial_state, final_state, probs\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -987,11 +998,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def pick_word(probabilities, int_to_vocab):\n",
     "    \"\"\"\n",
@@ -1000,9 +1019,7 @@
     "    :param int_to_vocab: Dictionary of word ids as the keys and words as the values\n",
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
-    "    # TODO: Implement Function\n",
-    "    return None\n",
-    "\n",
+    "    return int_to_vocab[np.argmax(probabilities)]\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -1020,11 +1037,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./save\n",
+      "moe_szyslak:........................................................................................................................................................................................................\n"
+     ]
+    }
+   ],
    "source": [
     "gen_length = 200\n",
     "# homer_simpson, moe_szyslak, or Barney_Gumble\n",
